--- a/package.json
+++ b/package.json
@@ -19,21 +19,23 @@
     "@mui/material": "^6.3.1",
     "@mui/x-date-pickers": "^7.23.6",
     "dayjs": "^1.11.13",
+    "firebase": "^11.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/node": "^22.13.13",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "firebase-tools": "^13.35.1",
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5",
-    "firebase-tools": "^12.0.0"
+    "vite": "^6.2.3"
   }
 }
