--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ lerna-debug.log*
 node_modules
 dist-ssr
 *.local
+.firebase/*
 
 # Editor directories and files
 .vscode/*
@@ -21,5 +22,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.firebaserc
-.firebase/*
+.firebase/hosting.ZGlzdA.cache
