--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,12 +33,13 @@ jobs:
 
       - name: Write Firebase service account to file
         run: |
-          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT }}" > service-account.json
+          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > service-account.json
 
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
-      - name: Deploy to Firebase
-        run: firebase deploy --only hosting --project time-97992 --token "$(jq -r .token service-account.json)"
+      - name: Authenticate with Firebase using Service Account
+        run: |
+          firebase deploy --only hosting --project time-97992 --token "$(firebase login:ci --no-localhost --service-account service-account.json --json | jq -r .credential.access_token)"
         env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/service-account.json
