--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -33,9 +33,9 @@ jobs:
 
       - name: Write Firebase service account to file
         run: |
-          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT }}' > service-account.json
+          echo "${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }}" | base64 --decode > service-account.json
 
-      - name: Install Firebase CLI and gcloud CLI
+      - name: Install Firebase CLI and Google Cloud SDK
         run: |
           npm install -g firebase-tools
           curl https://sdk.cloud.google.com | bash
@@ -44,7 +44,5 @@ jobs:
           gcloud config set project time-97992
 
       - name: Deploy to Firebase Hosting
-        env:
-          GOOGLE_APPLICATION_CREDENTIALS: ${{ github.workspace }}/service-account.json
         run: |
           firebase deploy --only hosting --project time-97992 --token "$(gcloud auth print-access-token)" --non-interactive
