--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ dist
 *.sln
 *.sw?
 coverage
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
