--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -23,10 +28,10 @@ jobs:
       - name: Run unit tests
         run: npm run test:coverage
 
-      - name: Upload coverage to Coveralls
-        run: npx coveralls < coverage/lcov.info
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: Build project
         run: npm run build
@@ -47,16 +52,51 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Run Playwright SMOKE tests against Production
+      - name: Run Playwright tests against Production
         env:
           BASE_URL: https://time-97992.web.app
         run: |
-          echo "Running Playwright SMOKE tests against $BASE_URL"
+          echo "Running Playwright tests against $BASE_URL"
           npx playwright test
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: playwright-prod-smoke-report
+          name: playwright-prod-report
           path: playwright-report/
           retention-days: 7
+
+  deploy-pages:
+    needs: build-and-deploy
+    if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.build-and-deploy.result == 'success' }}
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Download Playwright report artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report
+
+      - name: Move report into /playwright folder
+        run: |
+          mkdir -p public/playwright
+          cp -r playwright-report/* public/playwright/
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: public
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
