--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -23,7 +23,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-
+        
+      - name: Run unit tests with coverage
+        run: npm run test:coverage
+        
       - name: Build project
         run: npm run build
 
