--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -26,6 +26,9 @@ jobs:
         
       - name: Run unit tests with coverage
         run: npm run test:coverage
+
+      - name: Security Audit
+        run: npm audit --production
         
       - name: Build project
         run: npm run build
@@ -56,6 +59,14 @@ jobs:
       - name: Show Preview URL
         run: |
           echo "Preview URL: ${{ steps.deploy_preview.outputs.PREVIEW_URL }}"
+
+      - name: Comment Preview URL on PR
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          header: "Preview Environment"
+          message: |
+            **Preview deployed!**
+            -> ${{ steps.deploy_preview.outputs.PREVIEW_URL }}
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
