feat: Refactor components for improved readability and maintainability
- Updated App component for better layout and styling.
- Enhanced GitHub component with consistent formatting.
- Improved Time component with clearer logic and structure.
- Refactored TimeInput component for better usability and test coverage.
- Updated utility functions for time calculations with clearer logic.
- Added MkDocs configuration for documentation deployment.
- Implemented CI/CD workflows for automated testing and deployment.
- Added ESLint and Prettier configurations for code quality.
- Created comprehensive documentation for architecture, CI/CD, and testing.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,23 +1,23 @@
 version: 2
 
 updates:
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "06:00"
+      interval: 'weekly'
+      day: 'monday'
+      time: '06:00'
     allow:
-      - dependency-type: "direct"
+      - dependency-type: 'direct'
     versioning-strategy: increase-if-necessary
     ignore:
-      - dependency-name: "*"
-        update-types: ["version-update:semver-major"]
+      - dependency-name: '*'
+        update-types: ['version-update:semver-major']
 
 automerged_updates:
   - match:
-      dependency_type: "direct"
-      update_type: "version-update:semver-minor"
+      dependency_type: 'direct'
+      update_type: 'version-update:semver-minor'
   - match:
-      dependency_type: "direct"
-      update_type: "version-update:semver-patch"
+      dependency_type: 'direct'
+      update_type: 'version-update:semver-patch'
