--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -2,7 +2,7 @@ name: PR Preview + Playwright
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   preview-and-test:
@@ -23,13 +23,16 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        
+
+      - name: Run ESLint
+        run: npm run lint
+
       - name: Run unit tests with coverage
         run: npm run test:coverage
 
       - name: Security Audit
         run: npm audit --production
-        
+
       - name: Build project
         run: npm run build
 
@@ -63,7 +66,7 @@ jobs:
       - name: Comment Preview URL on PR
         uses: marocchino/sticky-pull-request-comment@v2
         with:
-          header: "Preview Environment"
+          header: 'Preview Environment'
           message: |
             **Preview deployed!**
             -> ${{ steps.deploy_preview.outputs.PREVIEW_URL }}
