--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "prepare": "husky",
-    "test:all": "npm run lint && npm test && npm audit --omit=dev"
+    "test:all": "npm run lint && npm test && npm audit --omit=dev",
+    "audit": "npm audit --omit=dev"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx,json,css,md}": [
@@ -41,6 +42,9 @@
     "@babel/preset-typescript": "^7.27.0",
     "@eslint/js": "^9.39.1",
     "@playwright/test": "^1.56.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.6",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
@@ -64,6 +68,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.6.2",
+    "semantic-release": "^24.2.9",
     "ts-jest": "^29.3.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.47.0",
