--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Install Firebase CLI
         run: npm install -g firebase-tools
 
+      - name: Install jq
+        run: sudo apt-get install jq -y
+
       - name: Deploy to Firebase Preview Channel
         id: deploy_preview
         env:
@@ -57,15 +60,16 @@ jobs:
 
           firebase hosting:channel:deploy "$CHANNEL_ID" \
             --project "$FIREBASE_PROJECT_ID" \
-            --non-interactive > deploy.log
+            --non-interactive \
+            --json > deploy.json
 
-          # einfache Variante: URL aus Log rausparsen
-          PREVIEW_URL=$(grep -Eo 'https://[0-9a-zA-Z.-]+\.web\.app' deploy.log | head -n 1)
+          PREVIEW_URL=$(jq -r '.result[].url' deploy.json)
           echo "PREVIEW_URL=$PREVIEW_URL" >> $GITHUB_OUTPUT
 
       - name: Show Preview URL
         run: |
           echo "Preview URL: ${{ steps.deploy_preview.outputs.PREVIEW_URL }}"
+
 
       - name: Comment Preview URL on PR
         uses: marocchino/sticky-pull-request-comment@v2
