feat: update documentation and workflows for consistency and clarity

--- a/.github/workflows/pr-title-lint.yml
+++ b/.github/workflows/pr-title-lint.yml
@@ -30,4 +30,4 @@ jobs:
             ci
           requireScope: false
           subjectPattern: ^.+$
-          subjectPatternError: "The subject must not be empty."
+          subjectPatternError: 'The subject must not be empty.'
