--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Setup Python for MkDocs
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install MkDocs + plugins
         run: |
